--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "http-server"
+    "test": "webpack-dev-server --config test/webpack.config.dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +17,9 @@
   },
   "homepage": "https://github.com/jin5354/simple-virtual-dom#readme",
   "dependencies": {
-    "simp-html-parser": "^0.1.0"
+    "html-webpack-plugin": "^3.2.0",
+    "simp-html-parser": "^0.1.2",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
